Added end method to end scope